--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "parserOptions": {
       "ecmaVersion": 9,
       "sourceType": "module",
-      "project": "./tsconfig.json"
+      "project": "./tsconfig.*?.json"
     },
     "rules": {
       "eslint-comments/no-use": "off",
@@ -50,5 +50,13 @@
       "node": true,
       "es6": true,
       "jest/globals": true
-    }
+    },
+    "overrides": [
+      {
+        "files": ["**/__tests__/**"],
+        "rules":{
+          "no-console": 0
+        }
+      }
+    ]
   }
