--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "isomorphic-git": "^1.8.0"
+    "isomorphic-git": "^1.8.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
+    "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.19",
     "@typescript-eslint/parser": "^4.11.1",
     "@vercel/ncc": "^0.26.1",
