--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,9 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+name: 'commit-environment'
+description: 'parse ci tags in a commit and add them as environement variables'
+author: 'Layton Whiteley'
+branding:
+  icon: 'bell'
+  color: 'green'
 runs:
   using: 'node12'
   main: 'dist/index.js'
