chore: update package scripts

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
+  "name": "commit-environment",
   "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "parse ci tags in a commit and add them as environement variables",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc -p tsconfig.prod.json",
@@ -11,11 +11,17 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "commit": "npm run all && git add . && git commit -am 'chore: add dist action'  -m '--ci-tags-test=wunderbar'",
+    "push": "git push --follow-tags",
+    "commit:push": "npm run commit && npm run push",
+    "release:patch": "npm version patch && npm run push",
+    "release:minor": "npm version minor && npm run push",
+    "release:major": "npm version major && npm run push"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/lwhiteley/commit-environment.git"
   },
   "keywords": [
     "actions",
