--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,7 @@ description: 'parse ci tags in a commit and add them as environement variables'
 author: 'Layton Whiteley'
 branding:
   color: 'green'
+  icon: 'box'
 runs:
   using: 'node12'
   main: 'dist/index.js'
